# videoInput

./: .gitignore  notes.txt  usb devices - PLEASE READ.txt
videoInputSrcAndDemos/CWProject-compileAsLib/: videoInput.lib  videoInputLib.mcp
videoInputSrcAndDemos/CWProject-compileAsLib/videoInputLib_Data/: CWSettingsWindows.stg
videoInputSrcAndDemos/CWProject-videoDemo/: videoInput.mcp
videoInputSrcAndDemos/DevCpp-CompileAsLib/: compileInDevCpp.txt  useInDevCpp.txt
videoInputSrcAndDemos/VC2005 INSTRUCTIONS/: SETUP INSTSTUCTIONS AND QUIRKS .txt
videoInputSrcAndDemos/VC2005-videoInputCompileAsLib/: videoInput.sln  videoInput.vcproj
videoInputSrcAndDemos/VC2005-videoInputDemoWithLib/: videoInputBasicDemo.sln  videoInputBasicDemo.vcproj
videoInputSrcAndDemos/VC2005-videoInputDemoWithSrc/: videoInputBasicDemo.vcproj
videoInputSrcAndDemos/VC2008 INSTRUCTIONS/: New Text Document.txt
videoInputSrcAndDemos/VC2008-videoInputDemoWithLib/: videoInputBasicDemo.suo.old  videoInputBasicDemo.vcproj
videoInputSrcAndDemos/VC2008-videoInputDemoWithSrc/: videoInputBasicDemo.sln  videoInputBasicDemo.vcproj  videoInputBasicDemo.vcxproj
videoInputSrcAndDemos/VC2008-videoInputcompileAsLib/: videoInput.sln  videoInput.suo.old  videoInput.vcproj
videoInputSrcAndDemos/VS-videoInputDemoWithSrc/: videoInputBasicDemo.sln  videoInputBasicDemo.vcxproj
videoInputSrcAndDemos/VS-videoInputcompileAsLib/: videoInput.sln  videoInput.vcxproj
videoInputSrcAndDemos/libs/videoInput/: CMakeLists.txt  videoInput.cpp  videoInput.h
videoInputSrcAndDemos/msys2/: Makefile
(+105 files in other folders)
